14. Deployment Strategies/Canary Deployment_left/apache.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-app
  namespace: canary-ns
  labels:
    app: web
    version: v2
spec:
  replicas: 4
  selector:
    matchLabels:
      app: web
      version: v2
  template:
    metadata:
      labels:
        app: web
        version: v2
    spec:
      containers:
      - name: apache-image
        image: httpd:2.4
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
