14. Deployment Strategies/Canary Deployment_left/nginx_app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app
  namespace: canary-ns
  labels:
    app: web
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
      version: v1
  template:
    metadata:
      labels:
        app: web
        version: v1
    spec:
      containers:
      - name: nginx-image
        image: nginx
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
