14. Deployment Strategies/Canary Deployment_left/canary-service.yml
apiVersion: v1
kind: Service
metadata:
  name: canary-service
  namespace: canary-ns
spec:
  selector:
    app: web
    version: v2
  ports:
  - port: 80
    targetPort: 80
