14. Deployment Strategies/Canary Deployment_left/stable-service.yml
apiVersion: v1
kind: Service
metadata:
  name: stable-service
  namespace: canary-ns
spec:
  selector:
    app: web
    version: v1
  ports:
  - port: 80
    targetPort: 80
