14. Deployment Strategies/Canary Deployment_left/canary-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-ingress
  namespace: canary-ns
  labels:
    app.kubernetes.io/name: myingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  ingressClassName: nginx
  rules:
    - host: example.com
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: canary-service
              port: 
                number: 80
