14. Deployment Strategies/Canary Deployment_left/stable-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stable-ingress
  namespace: canary-ns
  labels:
    app.kubernetes.io/name: myingress
spec:
  ingressClassName: nginx
  rules:
    - host: example.com
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: stable-service
              port: 
                number: 80
